// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDefinitionTerm should render correctly 1`] = `
<dt
  className="bpk-definition-list__term"
>
  Term
</dt>
`;

exports[`BpkDefinitionTerm should render correctly with a "className" attribute 1`] = `
<dt
  className="bpk-definition-list__term test-term"
>
  Term
</dt>
`;

exports[`BpkDefinitionTerm should render correctly with a other attributes 1`] = `
<dt
  className="bpk-definition-list__term"
  title="this is a term"
>
  Term
</dt>
`;
